Support -Xmodule-path and -Xadd-modules command line arguments
 #KT-18598 In Progress
 #KT-18599 Fixed